--- a/web/templates/schedule_form.html
+++ b/web/templates/schedule_form.html
@@ -11,7 +11,7 @@
 <div class="card" style="max-width: 900px; margin: 0 auto;">
     <div style="display: flex; justify-content: space-between; align-items: start; margin-bottom: 2rem;">
         <div>
-            <h2><i data-lucide="calendar-plus" style="width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Schedule Appointment</h2>
+            <h2><i data-lucide="calendar-plus" style="color: #1F8F74; width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Schedule Appointment</h2>
             <div style="color: #718096;">
                 <div style="margin-bottom: 0.25rem;">
                     {{ client['first_name'] }} {% if client['middle_name'] %}{{ client['middle_name'] }} {% endif %}{{ client['last_name'] }}
