Shorten 'Back to Clients' to 'Back' across all pages

--- a/web/templates/manage_types.html
+++ b/web/templates/manage_types.html
@@ -229,6 +229,6 @@
         Click any row to edit. Custom types can be renamed, recoloured, or deleted (if no clients assigned).
     </small>
     
-    <a href="{{ url_for('clients.index') }}" class="btn">← Back to Clients</a>
+    <a href="{{ url_for('clients.index') }}" class="btn">← Back</a>
 </div>
 {% endblock %}
