--- a/web/templates/outstanding_statements.html
+++ b/web/templates/outstanding_statements.html
@@ -19,7 +19,7 @@
             <p>Generate and track client statements</p>
         </div>
         <a href="{{ url_for('clients.index') }}" class="btn">
-            <i data-lucide="arrow-left" style="width: 16px; height: 16px; margin-right: 0.35rem;"></i> Back to Clients
+            <i data-lucide="arrow-left" style="width: 16px; height: 16px; margin-right: 0.35rem;"></i> Back
         </a>
     </div>
     
