--- a/web/templates/manage_links.html
+++ b/web/templates/manage_links.html
@@ -62,7 +62,7 @@
     {% endif %}
     
     <div style="margin-top: 2rem; padding-top: 1.5rem; border-top: 1px solid #DEE2E6;">
-        <a href="{{ url_for('clients.index') }}" class="btn-add">← Back to Clients</a>
+        <a href="{{ url_for('clients.index') }}" class="btn-add">← Back</a>
     </div>
 </div>
 
