--- a/web/static/css/communication.css
+++ b/web/static/css/communication.css
@@ -6,3 +6,13 @@
 .form-group textarea {
     min-height: 300px;
 }
+
+/* File input styling to match other inputs
+.file-input {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #D1D5DB;
+    border-radius: 0.375rem;
+    box-sizing: border-box;
+    height: 38px;
+} */
